src/assets/album.css
.album-wrapper {
    width: 100%;
    height: clamp(120px, 45vw, 250px);
    position: relative;
}

.album-cover-wrapper {
    width: 100%;
    height: 100%;

    z-index: 1;
    position: absolute;

    background: linear-gradient(90deg, #9A9A9A 5.02%, rgba(153, 153, 153, 0) 100%);
    background-color: transparent;

    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: start;

    padding-left: 10%;

    transition: 200ms ease-in-out;

    cursor: pointer;
}

.album-cover-wrapper:hover {
    background-color: #d126e150;
}

.album-info-wrapper {
    display: flex;
    flex-direction: column;
    gap: 10px;
}

.album-text {
    padding: 0px;
    margin: 0px;
    text-align: center;

    font-family: 'Ubuntu';
    font-style: normal;
    color: white;
}

.album-header {
    font-weight: 700;
    font-size: clamp(16px, 7.5vw + 0.1rem, 36px);
}

.album-subheader {
    font-weight: 700;
    font-size: 16px;
    font-size: clamp(10px, 3.75vw + 0.1rem, 16px);
}

.album-images-wrapper {
    width: 2000%;
    height: 100%;
    position: absolute;
}

.album-cover-image {
    height: 100%;
    filter: blur(1.5px);
}

@media screen and (max-width: 600px) {
    .album-text {
        width: 100%;
    }

    .album-info-wrapper {
        width: 100%;
    }

    .album-cover-wrapper {
        padding:  0px 0px;
    }
}

